[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
image = { version = "0.24.7", default-features = false, features = ["pnm"] }
itertools = "0.11.0"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rayon = "1.7.0"
